--- a/assets/css/templatemo-space-dynamic.css
+++ b/assets/css/templatemo-space-dynamic.css
@@ -1473,14 +1473,14 @@ responsive
     right: 0;
   }
   .about-us .services {
-    text-align: center;
+    
   }
   .about-us .services .item  {
     background: rgb(255,77,30);
     background: linear-gradient(105deg, rgba(255,77,30,1) 0%, rgba(255,44,109,1) 100%);
     padding: 30px;
     border-radius: 20px;
-    
+    display: inline-block;
   }
   .about-us .services .item .right-text {
     text-align: left;
